--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -190,8 +190,16 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\KNIMENODE}[1]{\texttt{#1}}
-\newcommand{\OPENMSTOOL}[1]{\texttt{#1}}
+\newcommand*\justify{%
+  \fontdimen2\font=0.4em% interword space
+  \fontdimen3\font=0.2em% interword stretch
+  \fontdimen4\font=0.1em% interword shrink
+  \fontdimen7\font=0.1em% extra space
+  \hyphenchar\font=`\-% allowing hyphenation
+}
+
+\newcommand{\KNIMENODE}[1]{\texttt{\justify{#1}}}
+\newcommand{\OPENMSTOOL}[1]{\texttt{\justify{#1}}}
 
 \usepackage{etoolbox} % simplified if / else checks in latex
 
