--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -13,22 +13,29 @@ Quantitation and identification of chemical compounds are basic tasks in metabol
 %  \label{fig:consensusid}
 %\end{figure}
 
-\subsection{Quantifying metabolites across several experiments}
+\subsection{Basics of non-targeted metabolomics data analysis}
 
-For the metabolite quantification we choose an approach similar to the one used for peptides, but this time based on the OpenMS \KNIMENODE{FeatureFinderMetabo} method. This feature finder again collects peak picked data into individual mass traces. The reason why we need a different feature finder for metabolites lies in the step after trace detection: the aggregation of isotopic traces belonging to the same compound ion into the same feature. Compared to peptides with their averagine model, small molecules have very different isotopic distributions. To group small molecule mass traces correctly, an aggregation model tailored to small molecules is thus needed.
+For the metabolite quantification we choose an approach similar to the one used for peptides, but this time based on the OpenMS \KNIMENODE{FeatureFinderMetabo} method. This feature finder again collects peak picked data into individual mass traces. The reason why we need a different feature finder for metabolites lies in the step after trace detection: the aggregation of isotopic traces belonging to the same compound ion into the same feature. Compared to peptides with their averagine model, small molecules have very different isotopic distributions. To group small molecule mass traces correctly, an aggregation model tailored to small molecules is thus needed. 
 
 \begin{itemize}
 \item
 Create a new workflow called for instance "Metabolomics".
 \item
-Add an \KNIMENODE{Input Files} node and configure it with all mzML files from \directory{Example\_Data / Metabolomics / datasets}.
+Add an \KNIMENODE{Input File} node and configure it with one mzML file from the \directory{Example\_Data / Metabolomics / datasets}.
 \item
-Add a \KNIMENODE{ZipLoopStart} node and connect the \KNIMENODE{Input Files} node to the first port of the \KNIMENODE{ZipLoopStart} node.
-\item
-Add a \KNIMENODE{FeatureFinderMetabo} node (from \menu{Community Nodes > OpenMS > Quantitation} and connect the first output port of the \KNIMENODE{ZipLoopStart} to the \KNIMENODE{FeatureFinderMetabo}.
+Add a \KNIMENODE{FeatureFinderMetabo} node (from \menu{Community Nodes > OpenMS > Quantitation} and connect the first output port of the \KNIMENODE{Input File} to the \KNIMENODE{FeatureFinderMetabo}.
 \item
 For an optimal result adjust the following settings.
 Please note that some of these are advanced parameters.
+\item
+Connect a \KNIMENODE{Output Folder} to the output of the \KNIMENODE{FeatureFinderMetabo} (see Fig.~\ref{fig:minimal_FFM_wf}).
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.5\textwidth]{graphics/metabo/minimal_FFM_wf.png}
+  \caption{FeatureFinderMetabo workflow.}
+  \label{fig:minimal_FFM_wf}
+\end{figure}
 
 \begin{center}
 \begin{tabular}{l|l}
@@ -37,16 +44,71 @@ Please note that some of these are advanced parameters.
 \textit{algorithm $\rightarrow$ mtd $\rightarrow$ trace\_termination\_criterion} & sample\_rate \\
 \textit{algorithm $\rightarrow$ mtd $\rightarrow$ min\_trace\_length} & $3.0$ \\
 \textit{algorithm $\rightarrow$ mtd $\rightarrow$ max\_trace\_length} & $600.0$ \\
-\textit{algorithm $\rightarrow$ epd $\rightarrow$ width\_filtering} & off
+\textit{algorithm $\rightarrow$ epd $\rightarrow$ width\_filtering} & off \\
+\textit{algorithm $\rightarrow$ ffm $\rightarrow$ report\_convex\_hulls} & true
 \end{tabular}
 \end{center}
-
-\item
-Add a \KNIMENODE{ZipLoopEnd} node and connect the output of the \KNIMENODE{FeatureFinderMetabo} to the first port of the \KNIMENODE{ZipLoopEnd} node.
-
 \end{itemize}
 
-To facilitate the collection of features corresponding to the same compound ion across different samples, an alignment of the samples' feature maps along retention time is often helpful. In addition to local, small-scale elution differences, one can often see constant retention time shifts across large sections between samples. We can use linear transformations to correct for these large scale retention differences. This  brings the majority of corresponding compound ions close to each other. Finding the correct corresponding ions is then faster and easier, as we don't have to search as far around individual features.
+The parameters change the behavior of \KNIMENODE{FeatureFinderMetabo} as follows:
+\begin{itemize}
+\item \textbf{chrom\_fwhm}: The expected chromatographic peak width in seconds.
+\item \textbf{trace\_termination\_criterion}: In the first stage \KNIMENODE{FeatureFinderMetabo} assembles mass traces with a pre-defined mass accuracy. If this parameter is set to 'outlier', the extension of a mass trace is stopped after a predefined number of consecutive outliers is found. If this parameter is set to 'sample\_rate', the extension of a mass trace is stopped once the ratio of collected peaks versus visited spectra falls below the ratio given by min\_sample\_rate.
+\item \textbf{min\_trace\_length}: Minimal length of a mass trace in seconds. Choose a small value, if you want to identify low-intensity compounds.
+\item \textbf{max\_trace\_length}: Maximal length of a mass trace in seconds. Set this parameter to -1 to disable the filtering by maximal length.
+\item \textbf{width\_filtering}: \KNIMENODE{FeatureFinderMetabo} can remove features with unlikely peak widths from the results. If activated it will use the interval provided by the paramters min\_fwhm and max\_fwhm.
+\item \textbf{report\_convex\_hulls}: If set to true, convex hulls including mass traces will be reported for all identified features. This increases the output size considerably.
+\end{itemize}
+
+\noindent The output file .featureXML can be visualized with TOPPView on top of the used .mzML file - in a so called 	\textit{layer} - to look at the identified features.
+\newline
+ 
+\noindent First start TOPPView and open the example .mzML file (see Fig.~\ref{fig:ToppView_1}). Afterwards open the .featureXML output as new layer (see Fig.~\ref{fig:ToppView_2}). The overlay is depcied in Figure~\ref{fig:ToppView_3}. The zoom of the .mzML - .featureXML overlay shows the individual mass traces and the assembly of those in a feature (see Fig.~\ref{fig:ToppView_4}).
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{graphics/metabo/ToppView_1.png}
+  \caption{Openend .mzML in TOPPView.}
+  \label{fig:ToppView_1}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{graphics/metabo/ToppView_2.png}
+  \caption{Add new layer in TOPPView.}
+  \label{fig:ToppView_2}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{graphics/metabo/ToppView_3.png}
+  \caption{Overlay of the .mzML layer with the .featureXML layer. }
+  \label{fig:ToppView_3}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{graphics/metabo/ToppView_4.png}
+  \caption{Zoom of the overlay of the .mzML with the .featureXML layer. Here the individual isotope traces (blue lines) are assembled into a feature here shown as convex hull (rectangular box).}
+  \label{fig:ToppView_4}
+\end{figure}
+
+\newline
+
+The workflow can be extended for multi-file analysis, here an \KNIMENODE{Input Files} is to be used instead of the \KNIMENODE{Input File}.  In front of the \KNIMENODE{FeatureFinderMetabo} a \KNIMENODE{Ziploop Start} and behind \KNIMENODE{Ziploop End} has to be used, since FeatureFinderMetabo will analyis on file to file bases. 
+\newline
+To facilitate the collection of features corresponding to the same compound ion across different samples, an 
+ment of the samples' feature maps along retention time is often helpful. In addition to local, small-scale elution differences, one can often see constant retention time shifts across large sections between samples. We can use linear transformations to correct for these large scale retention differences. This  brings the majority of corresponding compound ions close to each other. Finding the correct corresponding ions is then faster and easier, as we don't have to search as far around individual features.
+
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth]{graphics/metabo/align.png}
+	\caption[Map alignment]
+	{
+	\textbf{Map alignment.} The first feature map is used as a reference to which other maps are aligned. The calculated transformation brings corresponding features into close retention time proximity. Linking of these features form a so-called consensus features of a \textit{consensus map}.
+	}
+	\label{bg_alignment}
+\end{figure}
 
 \begin{itemize}
 \item
@@ -66,8 +128,29 @@ After the \KNIMENODE{ZipLoopEnd} node add a \KNIMENODE{MapAlignerPoseClustering}
 
 \end{itemize}
 
+\noindent \KNIMENODE{MapAlignerPoseClustering} provides an algorithm to align the retention time scales of multiple input files, correcting shifts and distortions between them. Retention time adjustment may be necessary to correct for chromatography differences e.g. before data from multiple LC-MS runs can be combined (feature linking). The alignment algorithm implemented here is the pose clustering algorithm. \\
+
+\noindent The parameters change the behavior of \KNIMENODE{MapAlignerPoseClustering} as follows:
+\begin{itemize}
+\item \textbf{max\_num\_peaks\_considered}: The maximal number of peaks/features to be considered per map. To use all, set this parameter to -1.
+\item \textbf{mz\_pair\_max\_distance}: Maximum of m/z deviation of corresponding elements in different maps.  This condition applies to the pairs considered in hashing.
+\item \textbf{num\_used\_points}: Maximum number of elements considered in each map (selected by intensity). Use a smaller number to reduce the running time and to disregard weak signals during alignment.
+\item \textbf{distance\_RT $\rightarrow$ max\_difference}: Features that have a larger RT difference will never be paired.
+\item \textbf{distance\_MZ $\rightarrow$ max\_difference}: Features that have a larger m/z difference will never be paired.
+\item \textbf{distance\_MZ $\rightarrow$ unit}: Unit used for the parameter distance\_MZ max\_difference, either Da or ppm.
+\end{itemize}
+
 The next step after retention time correction is the grouping of corresponding features in multiple samples. In contrast to the previous alignment, we assume no linear relations of features across samples. The used method is tolerant against local swaps in elution order.
 
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.7\textwidth]{graphics/metabo/link.png}
+	\caption[Label-free quantification]
+	{
+	\textbf{Feature linking}. Features A and B correspond to the same analyte. The linking of features between runs (indicated by an arrow) allows comparing feature intensities.
+	}
+	\label{fig_bg_link}
+\end{figure}
 
 \begin{itemize}
 \item
@@ -83,6 +166,13 @@ After the \KNIMENODE{MapAlignerPoseClustering} add a \KNIMENODE{FeatureLinkerUnl
 \end{tabular}
 \end{center}
 
+\noindent The parameters change the behavior of \KNIMENODE{FeatureLinkerUnlabeledQT} as follows (similar to the parameters we adjusted for \KNIMENODE{MapAlignerPoseClustering}):
+\begin{itemize}
+\item \textbf{distance\_RT $\rightarrow$ max\_difference}: Features that have a larger RT difference will never be paired.
+\item \textbf{distance\_MZ $\rightarrow$ max\_difference}: Features that have a larger m/z difference will never be paired.
+\item \textbf{distance\_MZ $\rightarrow$ unit}: Unit used for the parameter distance\_MZ max\_difference, either Da or ppm.
+\end{itemize}
+
 \item
 After the \KNIMENODE{FeatureLinkerUnlabeledQT} add a \KNIMENODE{TextExporter} node (\menu{Community Nodes > OpenMS > File Handling}).
 \item
@@ -91,11 +181,6 @@ Add an \KNIMENODE{Output Folder} node and configure it with an output directory 
 Run the pipeline and inspect the output.
 \end{itemize}
 
-You should find a single, tab-separated file containing the information on where metabolites were found and with which intensities.
-You can also add \KNIMENODE{Output Folder} nodes at different stages of the workflow and inspect the intermediate results (e.g., identified metabolite features for each input map).
-The complete workflow can be seen in \cref{fig:metabo_part1}.
-In the following section we will try to identify those metabolites.
-
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part1}
@@ -103,7 +188,21 @@ In the following section we will try to identify those metabolites.
   \label{fig:metabo_part1}
 \end{figure}
 
-\subsection{Identifying metabolites in LC-MS/MS samples}
+You should find a single, tab-separated file containing the information on where metabolites were found and with which intensities.
+You can also add \KNIMENODE{Output Folder} nodes at different stages of the workflow and inspect the intermediate results (e.g., identified metabolite features for each input map).
+The complete workflow can be seen in \cref{fig:metabo_part1}.
+In the following section we will try to identify those metabolites.
+
+\noindent The \KNIMENODE{FeatureLinkerUnlabeledQT} output can be visualized in ToppView on top of the input and output of the \KNIMENODE{FeatureFinderMetabo} (see Fig~\ref{fig:ToppView_5}). 
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{graphics/metabo/ToppView_5.png}
+  \caption{Visualization of .consensusXML output over the .mzML and .featureXML 'layer'. }
+  \label{fig:ToppView_5}
+\end{figure}
+
+\subsection{Basic metabolite identification}
 
 At the current state we found several metabolites in the individual maps but so far don't know what they are.
 To identify metabolites OpenMS provides multiple tools, including search by mass: the \KNIMENODE{AccurateMassSearch} node searches observed masses against the Human Metabolome Database (HMDB)\cite{Wishart2007,Wishart2009,Wishart2013}.
@@ -150,8 +249,7 @@ The complete workflow from this section is shown in \cref{fig:metabo_part2}.
   \label{fig:metabo_part2}
 \end{figure}
 
-
-\subsection{Convert your data into a KNIME table}
+\subsubsection{Convert your data into a KNIME table}
 
 The result from the \KNIMENODE{TextExporter} node as well as the result from the \KNIMENODE{AccurateMassSearch} node are files while standard KNIME nodes display and process only KNIME tables. To convert these files into KNIME tables we need two different nodes.
 For the \KNIMENODE{AccurateMassSearch} results we use the \KNIMENODE{MzTabReader} node (\menu{Community Nodes > OpenMS > Conversion > mzTab}) and its \textit{Small Molecule Section} port. For the result of the \KNIMENODE{TextExporter} we use the \KNIMENODE{ConsensusTextReader} (\menu{Community Nodes > OpenMS > Conversion}).
@@ -167,7 +265,7 @@ The full workflow is shown in \cref{fig:metabo_part3}.
   \label{fig:metabo_part3}
 \end{figure}
 
-\subsubsection{Bonus task: Visualizing data}
+\subsubsection{Visualizing data}
 
 Now that you have your data in KNIME you should try to get a feeling for the capabilities of KNIME.
 
@@ -181,6 +279,71 @@ Have a look at the \KNIMENODE{Column Filter} node to reduce the table to the int
 \begin{task}
 Try to compute and visualize the m/z and retention time error of the different elements of the consensus features.
 \end{task}
+
+\subsubsection{Spectral library search}
+
+Identifying metabolites using only the accurate mass may lead to ambiguous results. In practice, additional information (e.g. the retention time) is used to further narrow down potential candidates. Apart from MS1-based features, tandem mass spectra (MS2) of metabolites provide additional information.
+In this part of the tutorial, we take a look on how metabolite spectra can be identified using a library of previously identified spectra.
+
+Because these libraries tend to be large we don't distribute them with OpenMS. 
+
+\begin{task}
+
+Please copy the spectral library from \\
+\directory{Example\_Data / Metabolomics / databases / MetaboliteSpectralDB.mzML}\\
+on the USB stick into the following directory of your KNIME installation (version numbers and dates may differ slightly):
+\begin{itemize}
+	\item Windows \newline \directory{C: / Program Files / KNIME3.3 / plugins \newline/ de.openms.win32.x86\_64\_2.1.0.201611191105 / payload / share / OpenMS / CHEMISTRY}
+	\item macOS \newline \directory{ Applications/ KNIME 3.3.app / Contents / Eclipse / plugins / \newline 
+de.openms.macosx.x86\_64\_2.1.0.201611191105 / payload / share / OpenMS / CHEMISTRY}
+\end{itemize}
+Now construct the workflow as shown in Fig.~\ref{fig:speclib}.
+Use the file \directory{Example\_Data / Metabolomics / datasets \newline / Metabolite\_ID\_SpectraDB\_positive.mzML} as input for your workflow. It contains tandem spectra that are identified by the \KNIMENODE{MetaboliteSpectralMatcher}. The resulting mzTab file is read back into a KNIME table and stored in an Excel table. Make sure that you connect the MzTabReader port corresponding to the Small Molecule Section to the \KNIMENODE{Excel writer (XLS)}).
+
+\end{task}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.7\textwidth]{graphics/metabo/speclib.png}
+  \caption{Spectral library identification workflow}
+  \label{fig:speclib}
+\end{figure}
+
+Run the workflow and inspect the output.
+
+\subsubsection{Manual validation}
+
+In metabolomics, matches between tandem spectra and spectral libraries are manually validated. Several commercial and free online resources exist which help in that task. Some examples are:
+
+\begin{itemize}
+\item mzCloud contains only spectra from Thermo Orbitrap instruments. The webpage requires Microsoft Silverlight which currently does not work in modern browsers (see \url{https://www.mzcloud.org/DataViewer}).
+\item MassBank North America (MoNA) has spectra from different instruments but falls short in in number of spectra (compared to Metlin and mzCloud) \url{http://mona.fiehnlab.ucdavis.edu/spectra/display/KNA00122}
+\item METLIN includes 961,829 molecules ranging from lipids, steroids, metabolites, small peptides, carbohydrates, exogenous drugs and toxicants. In total over 14,000 metabolites.
+\end{itemize}
+
+Here, we will use METLIN to manually validate metabolites.
+
+\begin{task}
+Open the mzML file in TOPPView and inspect some of your top hits. Select the tandem spectrum of Glutathione, but do not close TOPPView, yet.
+\end{task}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/glutathioneTV.png}
+  \caption{Tandem spectrum of glutathione. Visualized in TOPPView.}
+  \label{fig:consensusid}
+\end{figure}
+
+\begin{task}
+On the METLIN homepage search for \menu{Compound Name} Glutathione using the \menu{Advanced Search} (\url{https://metlin.scripps.edu/landing_page.php?pgcontent=advanced_search}). Note that free registration is required. Which collision energy (and polarity) gives the best (visual) match to your experimental spectrum in TOPPView?
+\end{task}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/glutathioneMetlin.png}
+  \caption{Tandem spectrum of glutathione. Visualized in Metlin. Note that several fragment spectra from varying collision energies are available.}
+  \label{fig:glutathioneMetlin}
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Downstream data analysis and reporting}
@@ -286,69 +449,4 @@ It would be more convenient to have only one row for each consensus feature with
 To this end, we use the \KNIMENODE{Column to Grid} node that flattens several rows with the same consensus number into a single one.
 Note that we have to specify the maximum number of columns in the grid so we set this to a large value (e.g. 100).
 We finally export the data to an Excel file (\KNIMENODE{XLS Writer}).
-
-\subsection{Spectral library search}
-
-Identifying metabolites using only the accurate mass may lead to ambiguous results. In practice, additional information (e.g. the retention time) is used to further narrow down potential candidates. Apart from MS1-based features, tandem mass spectra (MS2) of metabolites provide additional information.
-In this part of the tutorial, we take a look on how metabolite spectra can be identified using a library of previously identified spectra.
-
-Because these libraries tend to be large we don't distribute them with OpenMS. 
-
-\begin{task}
-
-Please copy the spectral library from \\
-\directory{Example\_Data / Metabolomics / databases / MetaboliteSpectralDB.mzML}\\
-on the USB stick into the following directory of your KNIME installation (version numbers and dates may differ slightly):
-\begin{itemize}
-	\item Windows \newline \directory{C: / Program Files / KNIME3.3 / plugins \newline/ de.openms.win32.x86\_64\_2.1.0.201611191105 / payload / share / OpenMS / CHEMISTRY}
-	\item macOS \newline \directory{ Applications/ KNIME 3.3.app / Contents / Eclipse / plugins / \newline 
-de.openms.macosx.x86\_64\_2.1.0.201611191105 / payload / share / OpenMS / CHEMISTRY}
-\end{itemize}
-Now construct the workflow as shown in Figure~\ref{fig:speclib}.
-Use the file \directory{Example\_Data / Metabolomics / datasets \newline / Metabolite\_ID\_SpectraDB\_positive.mzML} as input for your workflow. It contains tandem spectra that are identified by the \KNIMENODE{MetaboliteSpectralMatcher}. The resulting mzTab file is read back into a KNIME table and stored in an Excel table. Make sure that you connect the MzTabReader port corresponding to the Small Molecule Section to the \KNIMENODE{Excel writer (XLS)}).
-
-\end{task}
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.7\textwidth]{graphics/metabo/speclib.png}
-  \caption{Spectral library identification workflow}
-  \label{fig:speclib}
-\end{figure}
-
-Run the workflow and inspect the output.
-
-\subsubsection{Manual validation}
-
-In metabolomics, matches between tandem spectra and spectral libraries are manually validated. Several commercial and free online resources exist which help in that task. Some examples are:
-
-\begin{itemize}
-\item mzCloud contains only spectra from Thermo Orbitrap instruments. The webpage requires Microsoft Silverlight which currently does not work in modern browsers (see \url{https://www.mzcloud.org/DataViewer}).
-\item MassBank North America (MoNA) has spectra from different instruments but falls short in in number of spectra (compared to Metlin and mzCloud) \url{http://mona.fiehnlab.ucdavis.edu/spectra/display/KNA00122}
-\item METLIN includes 961,829 molecules ranging from lipids, steroids, metabolites, small peptides, carbohydrates, exogenous drugs and toxicants. In total over 14,000 metabolites.
-\end{itemize}
-
-Here, we will use METLIN to manually validate metabolites.
-
-\begin{task}
-Open the mzML file in TOPPView and inspect some of your top hits. Select the tandem spectrum of Glutathione, but do not close TOPPView, yet.
-\end{task}
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/glutathioneTV.png}
-  \caption{Tandem spectrum of glutathione. Visualized in TOPPView.}
-  \label{fig:consensusid}
-\end{figure}
-
-\begin{task}
-On the METLIN homepage search for \menu{Compound Name} Glutathione using the \menu{Advanced Search} (\url{https://metlin.scripps.edu/landing_page.php?pgcontent=advanced_search}). Note that free registration is required. Which collision energy (and polarity) gives the best (visual) match to your experimental spectrum in TOPPView?
-\end{task}
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/glutathioneMetlin.png}
-  \caption{Tandem spectrum of glutathione. Visualized in Metlin. Note that several fragment spectra from varying collision energies are available.}
-  \label{fig:glutathioneMetlin}
-\end{figure}
 
