--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -2,7 +2,7 @@
 
 % File names are changed quite often between tutorial so make them configurable at the top.
 % Please escape whitespaces except before and after / as a path separator.
-\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.5.0\ Installer\ (64bit).exe}	
+\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 3.5.0\ Installer\ (64bit).exe}	
 \newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.3.0\_Win64\_setup.exe}	
 \newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.3-prerequisites-installer.exe}
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-2.3/OpenMS-2.3-prerequisites-installer.exe/download}
@@ -54,7 +54,7 @@ If you are working through this tutorial at home you can get the installers unde
   \item KNIME: \href{https://www.knime.org/downloads/overview}{ https://www.knime.org/downloads/overview}
   \item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \href{\WindowsPrerequisitesLink}{here}.
 \end{itemize}
-Choose the installers for the platform you are working on. We suggest using the full installers of KNIME. It includes all free community extensions so that you can skip the installation of the OpenMS plugin and most other dependencies for the example workflows later.
+Choose the installers for the platform you are working on.
 
 \subsection{Data conversion}
 \label{Data_Conversion}
