--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -93,8 +93,6 @@ The parameters change the behavior of \KNIMENODE{FeatureFinderMetabo} as follows
   \label{fig:ToppView_4}
 \end{figure}
 
-\newline
-
 The workflow can be extended for multi-file analysis, here an \KNIMENODE{Input Files} is to be used instead of the \KNIMENODE{Input File}.  In front of the \KNIMENODE{FeatureFinderMetabo} a \KNIMENODE{Ziploop Start} and behind \KNIMENODE{Ziploop End} has to be used, since FeatureFinderMetabo will analyis on file to file bases. 
 \newline
 To facilitate the collection of features corresponding to the same compound ion across different samples, an 
@@ -331,7 +329,7 @@ Open the mzML file in TOPPView and inspect some of your top hits. Select the tan
   \centering
   \includegraphics[width=0.85\textwidth]{graphics/metabo/glutathioneTV.png}
   \caption{Tandem spectrum of glutathione. Visualized in TOPPView.}
-  \label{fig:consensusid}
+  \label{fig:glutathioneTandemSpectrum}
 \end{figure}
 
 \begin{task}
