--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -59,24 +59,24 @@ Choose the installers for the platform you are working on.
 \subsection{Data conversion}
 \label{Data_Conversion}
 
-Each MS instrument vendor has one or more formats for storing the acquired data. Converting these data into an open format (preferably mzML) is the very first step when you want to work with open-source mass spectrometry software. A freely available conversion tool is MSconvert, which is part of a ProteoWizard installation. All files used in this tutorial \textbf{have already been converted to mzML} by us, so you do not need to perform the data conversion yourself.
+Each MS instrument vendor has one or more formats for storing the acquired data. Converting these data into an open format (preferably mzML) is the very first step when you want to work with open-source mass spectrometry software. A freely available conversion tool is \texttt{MSConvert}, which is part of a \texttt{ProteoWizard} installation. All files used in this tutorial \textbf{have already been converted to mzML} by us, so you do not need to perform the data conversion yourself.
 However, we provide a small raw file so you can try the important step of raw data conversion for yourself.
 
 \note{The OpenMS installation package for Windows automatically installs ProteoWizard, so you do not need to download and install it separately. Due to restrictions from the instrument vendors, file format conversion for most formats is \textbf{only possible on Windows} systems. In practice, performing the conversion to mzML on the acquisition PC connected to the instrument is usually the most convenient option.}
 
-To convert raw data to mzML using ProteoWizard you can either use MSConvertGUI (a graphical user interface) or msconvert (a simple command line tool). Both tools are available in:
+\noindent To convert raw data to mzML using \texttt{ProteoWizard} you can either use \texttt{MSConvertGUI} (a graphical user interface) or \texttt{msconvert} (a simple command line tool). Both tools are available in:
 \newline
 \directory{\WindowsDefaultPWizFolder}.
 You can find a small RAW file on the USB stick:
 \directory{Example\_Data / Introduction / datasets / raw}.
 
 \subsubsection{MSConvertGUI}
-MSConvertGUI (see Fig.~\ref{fig:MSConvertGUI}) exposes the main parameters for data conversion in a convenient graphical user interface.
+\texttt{MSConvertGUI} (see Fig.~\ref{fig:MSConvertGUI}) exposes the main parameters for data conversion in a convenient graphical user interface.
 
 \begin{figure}
 \centering
 \includegraphics[width=12cm]{graphics/introduction/proteowizard.png}
-\caption{MSConvertGUI (ProteoWizard), allows converting raw files to mzML. Select the raw files you want to convert by clicking on the browse button and then on "Add". Default parameters can usually be kept as-is. To reduce the initial data size, make sure that the peakPicking filter (converts profile data to centroided data (see Fig. ~\ref{fig:ProfileCentroidData})) is listed, enabled (true) and applied to all MS levels (parameter "1-"). Start the conversion process by clicking on the "Start" button.}
+\caption{\texttt{MSConvertGUI} (part of \texttt{ProteoWizard}), allows converting raw files to mzML. Select the raw files you want to convert by clicking on the browse button and then on \menu{Add}. Default parameters can usually be kept as-is. To reduce the initial data size, make sure that the peakPicking filter (converts profile data to centroided data (see Fig.~\ref{fig:ProfileCentroidData})) is listed, enabled (true) and applied to all MS levels (parameter "1-"). Start the conversion process by clicking on the \menu{Start} button.}
 \label{fig:MSConvertGUI}
 \end{figure}
 
@@ -88,19 +88,19 @@ MSConvertGUI (see Fig.~\ref{fig:MSConvertGUI}) exposes the main parameters for d
 \end{figure}
 
 \subsubsection{msconvert}
-The msconvert command line tool offers more options than the graphical tool MSConvertGUI. It allows converting large numbers of files and can be easier automatized.
-\newline
-To convert and pick the file \textit{raw\_data\_file.RAW} you may write:
-\newline
+The \texttt{msconvert} command line tool has no user interface but offers more options than the application \texttt{MSConvertGUI}. Additionally, since it can be used within a batch script, it allows converting large numbers of files and can be much more easily automatized.
+
+\noindent To convert and pick the file \textit{raw\_data\_file.RAW} you may write:
+
 %% -{}- avoids latex ligatures
-\menu{msconvert raw\_data\_file.RAW -{}-filter "peakPicking true 1-"}
-\newline
-in your command line.
-\newline
-To convert all RAW files in a folder may write:
-\newline
-\menu{msconvert *.RAW -o my\_output\_dir}
-\newline
+\noindent\menu{msconvert raw\_data\_file.RAW -{}-filter "peakPicking true 1-"}
+
+\noindent in your command line.
+
+\noindent To convert all RAW files in a folder may write:
+
+\noindent\menu{msconvert *.RAW -o my\_output\_dir}
+
 \note{To display all options you may type \menu{msconvert -{}-help}. Additional information is available on the ProteoWizard web page.}
 
 
@@ -118,8 +118,8 @@ OpenMS provides a convenient viewer for some of the data: \OPENMSTOOL{TOPPView}.
 \label{fig:toppview}
 \end{figure}
 
-We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. Please familiarize yourself with the key controls and visualization methods.
-We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set. Conceptually, there are no differences in visualizing metabolomic or proteomic data. Here, we inspect a simple proteomic measurement:
+\noindent We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. Please familiarize yourself with the key controls and visualization methods.
+We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set. Note that conceptually, there are no differences in visualizing metabolomic or proteomic data. Here, we inspect a simple proteomic measurement:
 
 \begin{figure}[!htb]
 \includegraphics[width=0.75\textwidth]{graphics/introduction/3dview.png}
@@ -188,7 +188,7 @@ We will make use of these later throughout the tutorial. Let's start with a firs
 \label{KNIME_Intro}
 
 Using OpenMS in combination with KNIME, you can create, edit, open, save, and run workflows
-combining TOPP tools with the powerful data analysis capabilities of KNIME. Workflows can
+that combine TOPP tools with the powerful data analysis capabilities of KNIME. Workflows can
 be created conveniently in a graphical user interface. The parameters of all involved
 tools can be edited within the application and are also saved as part of the workflow.
 Furthermore, KNIME interactively performs validity checks during the workflow editing
@@ -364,8 +364,8 @@ rectangles with the mouse or adding elements to the selection by clicking them w
 \item[KNIME Explorer:]
 Shows a list of available workflows (also called workflow projects).
 You can open a workflow by double-clicking it.
-A new workflow can be created with a right-click in the Workflow Explorer followed by selecting \menu{New KNIME 
-Workflow...}.
+A new workflow can be created with a right-click in the Workflow Explorer followed by choosing \menu{New KNIME 
+Workflow...} from the appearing context menu.
 Remember to save your workflow often with the \menu{Ctrl}+\menu{S} shortcut.
 
 \item[Workflow Coach (since KNIME 3.2.1):]
@@ -515,7 +515,7 @@ The \KNIMENODE{ZipLoopEnd} collects the single files that arrive at its input po
 \end{figure}
 
 \subsubsection{Advanced topic: Working with chemical structures}
-Metabolomics analyses often involve working with chemical structures. Popular cheminformatic toolkits such as RDKit or CDK are available as KNIME plugins and allow us to work with chemical structures directly from within KNIME. In particular, we will use KNIME and RDKit to visualize a list of compounds and filter them by predefined substructures. Chemical structures are often represented as SMILES (\textbf{S}implified \textbf{m}olecular \textbf{i}nput \textbf{l}ine \textbf{e}ntry \textbf{s}pecification), a simple and compact way to describe complex chemical structures as text. For example, the chemical structure of L-alanine can be written as the SMILES string C[C@H](N)C(O)=O. As we will discuss later, all OpenMS tools that perform metabolite identification will report SMILES as part of their result, which can then be further processed and visualized using RDKit and KNIME.\\
+Metabolomics analyses often involve working with chemical structures. Popular cheminformatic toolkits such as RDKit or CDK are available as KNIME plugins and allow us to work with chemical structures directly from within KNIME. In particular, we will use KNIME and RDKit to visualize a list of compounds and filter them by predefined substructures. Chemical structures are often represented as SMILES (\textbf{S}implified \textbf{m}olecular \textbf{i}nput \textbf{l}ine \textbf{e}ntry \textbf{s}pecification), a simple and compact way to describe complex chemical structures as text. For example, the chemical structure of L-alanine can be written as the SMILES string C[C@H](N)C(O)=O. As we will discuss later, all OpenMS tools that perform metabolite identification will report SMILES as part of their result, which can then be further processed and visualized using RDKit and KNIME.
 
 \begin{figure}
 \centering
@@ -524,7 +524,7 @@ Metabolomics analyses often involve working with chemical structures. Popular ch
 \label{fig:structures_filter_workflow}
 \end{figure}
 
-Perform the following steps to build the workflow shown in in Fig.~\ref{fig:structures_filter_workflow}. You will use this workflow to visualize a list of SMILES strings and filter them by predefined substructures:
+\noindent Perform the following steps to build the workflow shown in in Fig.~\ref{fig:structures_filter_workflow}. You will use this workflow to visualize a list of SMILES strings and filter them by predefined substructures:
 
 \begin{itemize}
 \item Add the node \KNIMENODE{File Reader}, open the node configuration dialog and select the file \directory{smiles.csv}. This file has been exported from the Human Metabolome Database (HMDB) and contains the portion of the human metabolome that has been detected and quantified. The file preview on the bottom of the dialog shows that each compound is given by its HMDB accession, compound name, and SMILES string. Click on the column header 'SMILES' to change its properties. Change the column type from 'string' to 'smiles' and close the dialog with \menu{Ok}. Afterwards the SMILES column will be visualized as chemical structures instead of text directly within all KNIME tables.
