[ADD] Update links install software KNIME

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -9,9 +9,9 @@
 \newcommand{\WindowsDefaultPWizFolder}{C: / Program\ Files / OpenMS-2.3.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
 \newcommand{\MacKnimeInstallerName}{Mac / knime\_3.5.0.app.macosx.cocoa.x86\_64.dmg}	
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.3.0-Darwin.dmg}
-\newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.5}
-\newcommand{\KnimeTrustedSite}{http://tech.knime.org/update/community-contributions/trusted/3.5}
-\newcommand{\KnimeTrunkSite}{http://tech.knime.org/update/community-contributions/trunk/}
+\newcommand{\KnimeUpdateSite}{http://update.knime.com/analytics-platform/3.5}
+\newcommand{\KnimeTrustedSite}{http://update.knime.com/community-contributions/trusted/3.5}
+\newcommand{\KnimeTrunkSite}{http://update.knime.com/community-contributions/trunk}
 
 % enable this line if the internal OpenMS update site is used
 %\newcommand{\OpenMSSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/}
